--- a/blogproject/mysite/blog/templates/blog/base.html
+++ b/blogproject/mysite/blog/templates/blog/base.html
@@ -37,9 +37,44 @@
 <body>
     <nav class="navbar navbar-default techfont">
         <div class="container">
-            <li><a class="navbar-brand bigbrand" href=" %url post_list %">Myblog</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
+            <ul class="nav navbar-nav">
+                <li><a class="navbar-brand bigbrand" href=" %url post_list %">Myblog</a></li>
+                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="https://www.github.com">Github</a></li>
+                <li><a href="https://www.linkedin.com">LinkedIn</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li>
+                    <a href="{% url 'post_new' %}">New post</a>
+                </li>
+                <li>
+                    <a href="{% url 'post_draft_list' %}">Drafts</a>
+                </li>
+                <li>
+                    <a href="{% url 'logout' %}">Log Out</a>
+                </li>
+                <li>
+                    <a>welcome: {{user.username}}</a>
+                </li>
+                    {% else %}
+                    <li><a class="nav navbar-right" href="{%url 'login' %}"><span class="glyphicon glyphicon-user"></span></a></li>
+                {% endif %}
+            </ul>
+           
         </div>
     </nav>
+
+    <div class="content container">
+        <div class="row">
+            <div class="cod-md-8">
+                <div class="blog_posts">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
